--- a/cardblog/index.html
+++ b/cardblog/index.html
@@ -22,7 +22,7 @@
       </p>
     </div>
     <footer class="card_footer">
-      <p>By Annie Spratt</p>
+      <p>Annie Spratt</p>
     </footer>
   </article>
 </body>
